--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,5 +1,6 @@
 name: facebook_login_example
 description: Demonstrates how to use the facebook_login plugin.
+version: 1.0.0
 
 dependencies:
   flutter:
