--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: flutter_facebook_login
 description: A Flutter plugin for allowing users to authenticate with native Android &amp; iOS Facebook login SDKs.
-version: 3.0.0
-author: Iiro Krankka <iiro.krankka@gmail.com>
+version: 3.0.0+1
 homepage: https://github.com/roughike/flutter_facebook_login
+publish_to: http://noah.tecarta.com:8100
 
 dependencies:
   flutter:
@@ -15,8 +15,13 @@ dev_dependencies:
 
 flutter:
   plugin:
-    androidPackage: com.roughike.facebooklogin.facebooklogin
-    pluginClass: FacebookLoginPlugin
+    platforms:
+      android:
+        package: com.roughike.facebooklogin.facebooklogin
+        pluginClass: FacebookLoginPlugin
+      ios:
+        pluginClass: FacebookLoginPlugin
 
 environment:
-  sdk: ">=2.0.0-dev.28.0 <3.0.0"
+  sdk: ">=2.1.0 <3.0.0"
+  flutter: ">=1.12.0 <2.0.0"
